--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Homepage</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/modules.css" rel="stylesheet">
+  <link href="css/grid.css" rel="stylesheet">
+  <link href="css/type.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Playball" rel="stylesheet">
 </head>
 <body>
+
+  <header>
+    <h1>Krystyna MacLeod</h1>
+    <i class="icon i-192">
+      <img class="img-flex" src="images/icon.svg" alt="icon-head"></img>
+    </i>
+  </header>
 
 </body>
 </html>
