Add images to index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
     <i class="icon i-192">
       <img class="img-flex" src="images/icon.svg" alt="icon-head"></img>
     </i>
+
   </header>
+
+  <main>
+    <h2>My Work</h2>
+    <div>
+      <div>
+        <img class="img-flex" src="images/box.png" alt="icon-head"></img>
+      </div>
+    </div>
+
+  </main>
 
 </body>
 </html>
