--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
 
   <main>
     <h2>My Work</h2>
-    <div>
+    <div class="card">
       <div>
         <img class="img-flex" src="images/box.png" alt="icon-head"></img>
+      </div>
+      <div>
+        <h3>Project Two</h3>
+        <p>Type of Project</p>
       </div>
     </div>
 
