Change icon smaller

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <header>
     <h1>Krystyna MacLeod</h1>
-    <i class="icon i-192">
-      <img class="img-flex" src="images/icon.svg" alt="icon-head"></img>
+    <i class="icon i-32">
+      <img class="img-flex" src="images/icon-head.svg" alt="icon-head"></img>
     </i>
 
   </header>
@@ -24,7 +24,7 @@
     <h2>My Work</h2>
     <div class="card">
       <div>
-        <img class="img-flex" src="images/box.png" alt="icon-head"></img>
+        <img class="img-flex" src="images/box.png" alt="card"></img>
       </div>
       <div>
         <h3>Project Two</h3>
