--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 
   <header>
     <h1>Krystyna MacLeod</h1>
-    <i class="icon i-32">
-      <img class="img-flex" src="images/icon-head.svg" alt="icon-head"></img>
-    </i>
+    <div>
+      <i class="icon i-18">
+        <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
+      </i>
+    </div>
 
   </header>
 
