Add font family

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-  <header>
+  <header class="wrapper center-text">
     <h1>Krystyna MacLeod</h1>
     <div>
-      <i class="icon i-18">
+      <i class="icon i-128">
         <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
       </i>
     </div>
