Add lines to h1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
   <header class="wrapper center-text">
-    <h1>Krystyna MacLeod</h1>
+    <div class="container">
+      <h1 class="tena ">Krystyna MacLeod</h1>
+    </div>
     <div>
       <i class="icon i-128">
         <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
