--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-  <header class="wrapper center-text">
-    <div class="container">
-      <h1 class="tena ">Krystyna MacLeod</h1>
+  <header class="wrapper center-text push-2">
+    <div class="container push-1-8">
+      <h1 class="tena">Krystyna MacLeod</h1>
     </div>
     <div>
       <i class="icon i-128">
@@ -25,15 +25,50 @@
   </header>
 
   <main>
-    <h2>My Work</h2>
-    <div class="card">
-      <div>
-        <img class="img-flex" src="images/box.png" alt="card"></img>
+    <h2 class="exa center-text">My Work</h2>
+
+    <div class="grid">
+
+      <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
+        <div>
+          <i class="icon i-256">
+            <img class="img-flex" src="images/box.png" alt="card"></img>
+          </i>
+        </div>
+        <div>
+          <h3 class="push-1-8">Project Two</h3>
+          <p>Type of Project</p>
+        </div>
       </div>
-      <div>
-        <h3>Project Two</h3>
-        <p>Type of Project</p>
+
+      <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
+        <div>
+          <i class="icon i-256">
+            <img class="img-flex" src="images/middle-box.png" alt="card"></img>
+          </i>
+        </div>
+        <div>
+          <h3 class="push-1-8">Logo Re-design</h3>
+          <p>Branding</p>
+        </div>
       </div>
+
+      <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
+        <div>
+          <i class="icon i-256">
+            <img class="img-flex" src="images/box.png" alt="card"></img>
+          </i>
+        </div>
+        <div>
+          <h3 class="push-1-8">Project Three</h3>
+          <p>Type of Project</p>
+        </div>
+      </div>
+
+      <div>
+        <a class="btn btn-small" href="#">Standard Small Button</a>
+      </div>
+
     </div>
 
   </main>
