--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
   </header>
 
-  <main>
+  <main class="wrapper center-text">
     <h2 class="exa center-text">My Work</h2>
 
     <div class="grid">
 
       <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
-        <div>
+        <div class="island-1-4">
           <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
+            <img class="img-flex card-image" src="images/box.png" alt="card"></img>
           </i>
         </div>
         <div>
@@ -42,9 +42,9 @@
       </div>
 
       <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
-        <div>
+        <div class="island-1-4">
           <i class="icon i-256">
-            <img class="img-flex" src="images/middle-box.png" alt="card"></img>
+            <img class="img-flex card-image" src="images/middle-box.png" alt="card"></img>
           </i>
         </div>
         <div>
@@ -54,9 +54,9 @@
       </div>
 
       <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
-        <div>
+        <div class="island-1-4">
           <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
+            <img class="img-flex card-image" src="images/box.png" alt="card"></img>
           </i>
         </div>
         <div>
@@ -65,13 +65,29 @@
         </div>
       </div>
 
-      <div>
-        <a class="btn btn-small" href="#">Standard Small Button</a>
-      </div>
+    </div>
 
+    <div class="push-2">
+      <a class="btn btn" href="#">Check out more</a>
     </div>
 
   </main>
+
+  <section>
+    <div>
+
+    </div>
+    <div>
+      <h2 class="tera push-1-8">About</h2>
+      <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer from Ottawa, Ontario.</p>
+      <p class="micro">I design graphics, illustration and UX/UI design.</p>
+    </div>
+    <div>
+      <h2 class="tera push-1-8">Contact</h2>
+      <p class="push-1-8 micro">E-mail me at</p>
+      <p class="micro">hey@krystynamacleod.design</p>
+    </div>
+  </section>
 
 </body>
 </html>
