Add product page

--- a/index.html
+++ b/index.html
@@ -73,21 +73,31 @@
 
   </main>
 
-  <section>
-    <div>
+  <section class="wraper grid">
 
+    <div class="unit unit-s-1 unit-m-2 unit-l-2">
+      <i class="icon i-256">
+        <img class="img-flex card-image" src="images/profile-photo.png" alt="card"></img>
+      </i>
     </div>
-    <div>
-      <h2 class="tera push-1-8">About</h2>
-      <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer from Ottawa, Ontario.</p>
-      <p class="micro">I design graphics, illustration and UX/UI design.</p>
-    </div>
-    <div>
-      <h2 class="tera push-1-8">Contact</h2>
-      <p class="push-1-8 micro">E-mail me at</p>
-      <p class="micro">hey@krystynamacleod.design</p>
+
+    <div class="unit unit-s-1 unit-m-2 unit-l-2">
+      <div>
+        <h2 class="tera push-1-8">About</h2>
+        <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer from Ottawa, Ontario.</p>
+        <p class="micro">I design graphics, illustration and UX/UI design.</p>
+      </div>
+      <div>
+        <h2 class="tera push-1-8">Contact</h2>
+        <p class="push-1-8 micro">E-mail me at</p>
+        <p class="micro">hey@krystynamacleod.design</p>
+      </div>
     </div>
   </section>
+
+  <footer class="pad-t-1-2 pad-b-1-2 center-text">
+    <p class="micro push-1-8">© Krystyna Macleod</P>
+  </footer>
 
 </body>
 </html>
