--- a/project-redesign-logo.html
+++ b/project-redesign-logo.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>My Work</title>
+  <title>Logo Redesign</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/modules.css" rel="stylesheet">
   <link href="css/grid.css" rel="stylesheet">
@@ -23,6 +23,10 @@
     </div>
 
   </header>
+
+  <footer class="pad-t-1-2 pad-b-1-2 center-text">
+    <p class="micro push-1-8">© Krystyna Macleod</P>
+  </footer>
 
 </body>
 </html>
