Add photos of work

--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
     <div class="container push-1-8">
       <h1 class="tena">Krystyna MacLeod</h1>
     </div>
-    <div>
+    <div class="push">
       <i class="icon i-128">
         <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
       </i>
     </div>
+    <nav>
+      <a href="project.html" alt="project-page">Work</a>
+      <a href="#" alt="project-page">About</a>
+    <nav>
+
 
   </header>
 
@@ -29,10 +34,10 @@
 
     <div class="grid">
 
-      <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
-        <div class="island-1-4">
+      <div class="gutter-2 pad-t-2 pad-b-2 card-image unit s-1 m-1-3 l-1-3 card center-text">
+        <div class="island-1-2">
           <i class="icon i-256">
-            <img class="img-flex card-image" src="images/box.png" alt="card"></img>
+            <img class="img-flex" src="images/box.png" alt="card"></img>
           </i>
         </div>
         <div>
@@ -41,10 +46,10 @@
         </div>
       </div>
 
-      <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
+      <div class="card-image unit s-1 m-1-3 l-1-3 card center-text">
         <div class="island-1-4">
           <i class="icon i-256">
-            <img class="img-flex card-image" src="images/middle-box.png" alt="card"></img>
+            <img class="img-flex" src="images/middle-box.png" alt="card"></img>
           </i>
         </div>
         <div>
@@ -53,10 +58,10 @@
         </div>
       </div>
 
-      <div class="unit unit-s-1 unit-m-1-3 unit-l-1-3 card center-text">
+      <div class="card-image unit s-1 m-1-3 l-1-3 card center-text">
         <div class="island-1-4">
           <i class="icon i-256">
-            <img class="img-flex card-image" src="images/box.png" alt="card"></img>
+            <img class="img-flex" src="images/box.png" alt="card"></img>
           </i>
         </div>
         <div>
