--- a/project.html
+++ b/project.html
@@ -25,6 +25,9 @@
 
   <main>
     <h2 class="project-name">Logo Re-design</h2>
+    <div>
+      <img src="image/" alt=""></img>
+    </div>
 
   </main>
 
