Add content that was fixed

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-  <header class="wrapper center-text push-2">
-    <div class="container push-1-8">
+  <header class="center-text push-2">
+    <div class="push-1-8">
       <h1 class="tena">Krystyna MacLeod</h1>
     </div>
     <div class="push">
@@ -32,70 +32,75 @@
   <main class="wrapper center-text">
     <h2 class="exa center-text">My Work</h2>
 
-    <div class="grid">
+    <div class="grid push-2">
 
-      <div class="gutter-2 pad-t-2 pad-b-2 card-image unit s-1 m-1-3 l-1-3 card center-text">
-        <div class="island-1-2">
+      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
+        <div class="card-image island-1-2">
           <i class="icon i-256">
             <img class="img-flex" src="images/box.png" alt="card"></img>
           </i>
-        </div>
-        <div>
-          <h3 class="push-1-8">Project Two</h3>
-          <p>Type of Project</p>
-        </div>
-      </div>
-
-      <div class="card-image unit s-1 m-1-3 l-1-3 card center-text">
-        <div class="island-1-4">
-          <i class="icon i-256">
-            <img class="img-flex" src="images/middle-box.png" alt="card"></img>
-          </i>
-        </div>
-        <div>
-          <h3 class="push-1-8">Logo Re-design</h3>
-          <p>Branding</p>
+          <div>
+            <h3 class="push-1-8">Event Branding</h3>
+            <p>Branding</p>
+          </div>
         </div>
       </div>
 
-      <div class="card-image unit s-1 m-1-3 l-1-3 card center-text">
-        <div class="island-1-4">
+      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
+        <div class="card-image island-1-2">
+          <div>
+            <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
+          </div>
+          <div>
+            <h3 class="push-1-8">Logo Re-Design</h3>
+            <p>Branding</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
+        <div class="card-image island-1-2">
           <i class="icon i-256">
             <img class="img-flex" src="images/box.png" alt="card"></img>
           </i>
-        </div>
-        <div>
-          <h3 class="push-1-8">Project Three</h3>
-          <p>Type of Project</p>
+          <div>
+            <h3 class="push-1-8">Project Two</h3>
+            <p>Type of Project</p>
+          </div>
         </div>
       </div>
 
     </div>
 
     <div class="push-2">
-      <a class="btn btn" href="#">Check out more</a>
+      <a class="btn btn" href="project.html">Check out more</a>
     </div>
 
   </main>
 
-  <section class="wraper grid">
+  <section>
 
-    <div class="unit unit-s-1 unit-m-2 unit-l-2">
-      <i class="icon i-256">
-        <img class="img-flex card-image" src="images/profile-photo.png" alt="card"></img>
-      </i>
-    </div>
+    <div class="wrapper grid pad-t-2 pad-b-2">
 
-    <div class="unit unit-s-1 unit-m-2 unit-l-2">
-      <div>
-        <h2 class="tera push-1-8">About</h2>
-        <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer from Ottawa, Ontario.</p>
-        <p class="micro">I design graphics, illustration and UX/UI design.</p>
+      <div class="unit s-1 m-1-2 l-1-3 center-text">
+        <i class="icon i-256">
+          <img class="img-flex card-image" src="images/profile-photo.png" alt="card"></img>
+        </i>
       </div>
-      <div>
-        <h2 class="tera push-1-8">Contact</h2>
-        <p class="push-1-8 micro">E-mail me at</p>
-        <p class="micro">hey@krystynamacleod.design</p>
+
+      <div class="unit s-1 m-1-2 l-2-3">
+        <div class="grid">
+          <div class="unit s-1 m-1-2 l-1-2 island-1-4">
+            <h2 class="tera push-1-2">About</h2>
+            <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer from Ottawa, Ontario.</p>
+            <p class="micro">I design graphics, illustration and UX/UI design.</p>
+          </div>
+          <div class="unit s-1 m-1-2 l-1-2 island-1-4">
+            <h2 class="tera push-1-2">Contact</h2>
+            <p class="push-1-8 micro">E-mail me at</p>
+            <p class="micro">hey@krystynamacleod.design</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
