--- a/project-redesign-logo.html
+++ b/project-redesign-logo.html
@@ -24,6 +24,51 @@
 
   </header>
 
+  <main class="wrapper center-text">
+    <h2 class="exa center-text">My Work</h2>
+
+    <div class="grid">
+
+      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
+        <div class="card-image island-1-2">
+          <i class="icon i-256">
+            <img class="img-flex" src="images/box.png" alt="card"></img>
+          </i>
+          <div>
+            <h3 class="push-1-8">Event Branding</h3>
+            <p>Branding</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
+        <div class="card-image island-1-2">
+          <i class="icon i-256">
+            <img class="img-flex" src="images/box.png" alt="card"></img>
+          </i>
+          <div>
+            <h3 class="push-1-8">Logo Re-Design</h3>
+            <p>Branding</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
+        <div class="card-image island-1-2">
+          <i class="icon i-256">
+            <img class="img-flex" src="images/box.png" alt="card"></img>
+          </i>
+          <div>
+            <h3 class="push-1-8">Project Two</h3>
+            <p>Type of Project</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+  </main>
+
   <footer class="pad-t-1-2 pad-b-1-2 center-text">
     <p class="micro push-1-8">© Krystyna Macleod</P>
   </footer>
