Add links to html

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
     </div>
     <nav>
       <a href="project.html" alt="project-page">Work</a>
-      <a href="#" alt="project-page">About</a>
+      <a href="#" alt="About-me">About</a>
     <nav>
-
 
   </header>
 
@@ -48,6 +47,7 @@
 
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
+          <a href="project-redesign-logo.html">
           <div>
             <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
           </div>
@@ -55,6 +55,7 @@
             <h3 class="push-1-8">Logo Re-Design</h3>
             <p>Branding</p>
           </div>
+          </a>
         </div>
       </div>
 
