--- a/project.html
+++ b/project.html
@@ -21,6 +21,10 @@
         <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
       </i>
     </div>
+    <nav>
+      <a href="index.html" alt="project-page">Home</a>
+      <a href="index.html" alt="About-me">About</a>
+    <nav>
   </header>
 
   <main class="wrapper center-text">
