Change name to project page

--- a/index.html
+++ b/index.html
@@ -12,23 +12,33 @@
 </head>
 <body>
 
-  <header class="center-text push-2">
-    <div class="push-1-8">
+  <header class="text-center push-1-4 header">
+
+    <div class="nav-bar gutter-2">
+      <a href="project.html" alt="project-page">Homepage</a>
+    </div>
+
+    <div class="push-1-8 my-name gutter">
       <h1 class="tena">Krystyna MacLeod</h1>
     </div>
-    <div class="push">
-      <i class="icon i-128">
-        <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
-      </i>
+
+    <div class="nav-bar gutter-2">
+      <nav>
+        <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
+        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
+      <nav>
     </div>
-    <nav>
-      <a href="project.html" alt="project-page">Work</a>
-      <a href="#" alt="About-me">About</a>
-    <nav>
 
   </header>
 
-  <main class="wrapper center-text">
+  <div class="push text-center">
+    <i class="icon i-128">
+      <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
+    </i>
+  </div>
+
+
+  <main class="wrapper text-center">
     <h2 class="exa center-text">My Work</h2>
 
     <div class="grid push-2">
@@ -47,7 +57,7 @@
 
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
-          <a href="project-redesign-logo.html">
+          <a href="project-1.html">
           <div>
             <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
           </div>
@@ -79,7 +89,7 @@
 
   </main>
 
-  <section>
+  <section id="about">
 
     <div class="wrapper grid pad-t-2 pad-b-2">
 
