--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 <body>
 
   <header class="wrapper center-text push-2">
-    <div class="container push-1-8">
+    <div class="push-1-8">
       <h1 class="tena">Krystyna MacLeod</h1>
     </div>
     <div>
@@ -23,7 +23,7 @@
     </div>
     <nav>
       <a href="index.html" alt="project-page">Home</a>
-      <a href="index.html" alt="About-me">About</a>
+      <a href="project.html" alt="About-me">Work</a>
     <nav>
   </header>
 
