Change header for project page

--- a/project.html
+++ b/project.html
@@ -12,20 +12,30 @@
 </head>
 <body>
 
-  <header class="wrapper center-text push-2">
-    <div class="push-1-8">
+  <header class="text-center push-1-4 header">
+
+    <div class="nav-bar gutter-2">
+      <a href="project.html" alt="project-page">Homepage</a>
+    </div>
+
+    <div class="push-1-8 my-name gutter">
       <h1 class="tena">Krystyna MacLeod</h1>
     </div>
-    <div>
-      <i class="icon i-128">
-        <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
-      </i>
+
+    <div class="nav-bar gutter-2">
+      <nav>
+        <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
+        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
+      <nav>
     </div>
-    <nav>
-      <a href="index.html" alt="project-page">Home</a>
-      <a href="project.html" alt="About-me">Work</a>
-    <nav>
+
   </header>
+
+  <div class="push text-center">
+    <i class="icon i-128">
+      <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
+    </i>
+  </div>
 
   <main class="wrapper center-text">
     <h2 class="exa center-text">My Work</h2>
