--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
-          <a href="project-1.html">
+          <a href="project-logo.html">
           <div>
             <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
           </div>
