--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
     </i>
   </div>
 
-  <main class="wrapper center-text">
+  <main class="wrapper text-center">
     <h2 class="exa center-text">My Work</h2>
 
     <div class="grid push-2">
@@ -56,13 +56,15 @@
 
       <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
         <div class="card-image island-1-2">
+          <a href="project-logo.html">
           <div>
-            <img class="img-flex" src="images/redesign-logo.jpg" alt="card" href="project-redesign-logo.html"></img>
+            <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
           </div>
           <div>
             <h3 class="push-1-8">Logo Re-Design</h3>
             <p>Branding</p>
           </div>
+          </a>
         </div>
       </div>
 
@@ -80,7 +82,12 @@
 
     </div>
 
+    <div class="push-2">
+      <a class="btn btn" href="project.html">Check out more</a>
+    </div>
+
   </main>
+
 
 
   <footer class="pad-t-1-2 pad-b-1-2 center-text">
