Add content to page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
 
-  <header class="text-center push-1-4 header">
+  <header class="text-center header">
 
     <div class="nav-bar gutter-2">
-      <a href="project.html" alt="project-page">Homepage</a>
+      <a href="index.html" alt="project-page">Homepage</a>
     </div>
 
     <div class="push-1-8 my-name gutter">
