--- a/project-logo.html
+++ b/project-logo.html
@@ -15,7 +15,7 @@
   <header class="text-center push-1-4 header">
 
     <div class="nav-bar gutter-2">
-      <a href="project.html" alt="project-page">Homepage</a>
+      <a href="index.html" alt="project-page">Homepage</a>
     </div>
 
     <div class="push-1-8 my-name gutter">
@@ -25,7 +25,7 @@
     <div class="nav-bar gutter-2">
       <nav>
         <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
-        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
+        <a class="gutter-1-8" href="index.html" alt="About-me">About</a>
       <nav>
     </div>
 
@@ -36,6 +36,53 @@
       <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
     </i>
   </div>
+
+  <main>
+    <div>
+      <div class="grid">
+        <div class="unit s-1 m-1-2 l-1-2 text-center island">
+          <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
+        </div>
+
+        <div class="unit s-1 m-1-2 l-1-2 island">
+          <h2>Re-design Logo</h2>
+          <p>This was a re-designing of a company logo. I went with a northern company Eskan Company. </p>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="grid">
+
+        <div class="unit s-1 m-1-2 l-1-2 island">
+          <h2>Sketches</h2>
+          <p>When re-designing the logo, I wanted to bring there company in more modern era of design but as well as keeping to who they are as a company. Keep simple shape with Teepee and slick design of the company building allows the logo mix both of roots and design. </p>
+        </div>
+
+        <div class="unit s-1 m-1-2 l-1-2 text-center island">
+          <i class="icons i-256">
+            <img class="img-flex icon" src="images/box.png" alt="card"></img>
+          </i>
+        </div>
+
+      </div>
+    </div>
+
+    <div>
+      <div class="grid">
+        <div class="unit s-1 m-1-2 l-1-2 text-center island">
+            <img class="img-flex" src="images/mock-up-logo-branding.jpg" alt="card"></img>
+        </div>
+
+        <div class="unit s-1 m-1-2 l-1-2 island">
+          <h2>Re-design Logo</h2>
+          <p>This was a re-designing of a company logo. I went with a northern company Eskan Company. </p>
+        </div>
+      </div>
+    </div>
+
+  </main>
+
 
   <main>
 
