--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
   <header class="text-center push-1-4 header">
 
     <div class="nav-bar gutter-2">
-      <a href="project.html" alt="project-page">Homepage</a>
+      <a href="index.html" alt="homepage">Homepage</a>
     </div>
 
     <div class="push-1-8 my-name gutter">
@@ -25,7 +25,7 @@
     <div class="nav-bar gutter-2">
       <nav>
         <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
-        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
+        <a class="gutter-1-8" href="index.html" alt="About-me">About</a>
       <nav>
     </div>
 
@@ -80,10 +80,6 @@
         </div>
       </div>
 
-    </div>
-
-    <div class="push-2">
-      <a class="btn btn" href="project.html">Check out more</a>
     </div>
 
   </main>
