Add details in about me

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="grid">
           <div class="unit s-1 m-1-2 l-1-2 island-1-4">
             <h2 class="tera push-1-2">About</h2>
-            <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer from Ottawa, Ontario.</p>
+            <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer that is studying in Algonquin College. I'm from Norhtern Quebec and came out to school to study. I have a background in Animation and then mov</p>
             <p class="micro">I design graphics, illustration and UX/UI design.</p>
           </div>
           <div class="unit s-1 m-1-2 l-1-2 island-1-4">
