Remove code from index

--- a/index.html
+++ b/index.html
@@ -1,124 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Homepage</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/modules.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Playball" rel="stylesheet">
-</head>
-<body>
+---
+layout: default
+title: Homepage
+bodyClass: card-page
+---
 
-  <header class="text-center header">
+<h1 class="exa center-text">My Work</h1>
 
-    <div class="nav-bar gutter-2">
-      <a href="index.html" alt="project-page">Homepage</a>
-    </div>
-
-    <div class="push-1-8 my-name gutter">
-      <h1 class="tena">Krystyna MacLeod</h1>
-    </div>
-
-    <div class="nav-bar gutter-2">
-      <nav>
-        <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
-        <a class="gutter-1-8" href="#about" alt="About-me">About</a>
-      <nav>
-    </div>
-
-  </header>
-
-  <div class="push text-center">
-    <i class="icon i-128">
-      <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
-    </i>
-  </div>
-
-
-  <main class="wrapper text-center">
-    <h2 class="exa center-text">My Work</h2>
-
-    <div class="grid push-2">
-
-      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-        <div class="card-image island-1-2">
-          <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
-          </i>
-          <div>
-            <h3 class="push-1-8">Event Branding</h3>
-            <p>Branding</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-        <div class="card-image island-1-2">
-          <a href="project-logo.html">
-          <div>
-            <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
-          </div>
-          <div>
-            <h3 class="push-1-8">Logo Re-Design</h3>
-            <p>Branding</p>
-          </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-        <div class="card-image island-1-2">
-          <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
-          </i>
-          <div>
-            <h3 class="push-1-8">Project Two</h3>
-            <p>Type of Project</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="push-2">
-      <a class="btn btn" href="project.html">Check out more</a>
-    </div>
-
-  </main>
-
-  <section id="about">
-
-    <div class="wrapper grid pad-t-2 pad-b-2">
-
-      <div class="unit s-1 m-1-2 l-1-3 center-text">
-        <i class="icon i-256">
-          <img class="img-flex card-image" src="images/profile-photo.png" alt="card"></img>
-        </i>
-      </div>
-
-      <div class="unit s-1 m-1-2 l-2-3">
-        <div class="grid">
-          <div class="unit s-1 m-1-2 l-1-2 island-1-4">
-            <h2 class="tera push-1-2">About</h2>
-            <p class="push-1-8 micro">My name is Krystyna Macleod and I am a graphic designer that is studying in Algonquin College. I'm from Norhtern Quebec and came out to school to study. I have a background in Animation and then mov</p>
-            <p class="micro">I design graphics, illustration and UX/UI design.</p>
-          </div>
-          <div class="unit s-1 m-1-2 l-1-2 island-1-4">
-            <h2 class="tera push-1-2">Contact</h2>
-            <p class="push-1-8 micro">E-mail me at</p>
-            <p class="micro">hey@krystynamacleod.design</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="pad-t-1-2 pad-b-1-2 center-text">
-    <p class="micro push-1-8">© Krystyna Macleod</P>
-  </footer>
-
-</body>
-</html>
+<main class="{{page.bodyClass}}">
+</main>
