Remove content to tag

--- a/project-logo.html
+++ b/project-logo.html
@@ -24,8 +24,8 @@
 
     <div class="nav-bar gutter-2">
       <nav>
-        <a class="gutter-1-8" href="{{site.baseurl}}/project.html" alt="project-page">Work</a>
-        <a class="gutter-1-8" href="{{site.baseurl}}/index.html" alt="About-me">About</a>
+        <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
+        <a class="gutter-1-8" href="index.html" alt="About-me">About</a>
       <nav>
     </div>
 
