--- a/project.html
+++ b/project.html
@@ -1,94 +1,5 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>My Work</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/modules.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Playball" rel="stylesheet">
-</head>
-<body>
+---
+layout: default.html
+---
 
-  <header class="text-center push-1-4 header">
-
-    <div class="nav-bar gutter-2">
-      <a href="index.html" alt="homepage">Homepage</a>
-    </div>
-
-    <div class="push-1-8 my-name gutter">
-      <h1 class="tena">Krystyna MacLeod</h1>
-    </div>
-
-    <div class="nav-bar gutter-2">
-      <nav>
-        <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
-        <a class="gutter-1-8" href="index.html" alt="About-me">About</a>
-      <nav>
-    </div>
-
-  </header>
-
-  <div class="push text-center">
-    <i class="icon i-128">
-      <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
-    </i>
-  </div>
-
-  <main class="wrapper text-center">
-    <h2 class="exa center-text">My Work</h2>
-
-    <div class="grid push-2">
-
-      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-        <div class="card-image island-1-2">
-          <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
-          </i>
-          <div>
-            <h3 class="push-1-8">Event Branding</h3>
-            <p>Branding</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-        <div class="card-image island-1-2">
-          <a href="project-logo.html">
-          <div>
-            <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
-          </div>
-          <div>
-            <h3 class="push-1-8">Logo Re-Design</h3>
-            <p>Branding</p>
-          </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="pad-t-2 pad-b-2 unit s-1 m-1-3 l-1-3 center-text island-1-2">
-        <div class="card-image island-1-2">
-          <i class="icon i-256">
-            <img class="img-flex" src="images/box.png" alt="card"></img>
-          </i>
-          <div>
-            <h3 class="push-1-8">Project Two</h3>
-            <p>Type of Project</p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-  </main>
-
-
-
-  <footer class="pad-t-1-2 pad-b-1-2 center-text">
-    <p class="micro push-1-8">© Krystyna Macleod</P>
-  </footer>
-
-</body>
-</html>
+ <h2 class="exa center-text">Portfolio</h2>
