Add cards html in inludes folder

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@ title: Homepage
 bodyClass: card-page
 ---
 
-<h1 class="exa center-text">My Work</h1>
+<h2 class="exa center-text">My Work</h2>
 
 <main class="{{page.bodyClass}}">
+
+  {% icludes cards.html %}
 
 </main>
