Add about html in include folder
then add it to index

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ bodyClass: card-page
 
 <h2 class="exa center-text">My Work</h2>
 
-<main class="{{page.bodyClass}}">
+<main class="wrapper {{page.bodyClass}}">
 
   {% include cards.html %}
+  {% include about.html %}
 
 </main>
