Add new include and add to logo page

--- a/project-logo.html
+++ b/project-logo.html
@@ -1,98 +1,9 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Logo Redesign</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link href="css/modules.css" rel="stylesheet">
-  <link href="css/grid.css" rel="stylesheet">
-  <link href="css/type.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Playball" rel="stylesheet">
-</head>
-<body>
+---
+layout: default
+---
 
-  <header class="text-center push-1-4 header">
+<h2 class="exa center-text">Re-design Logo</h2>
 
-    <div class="nav-bar gutter-2">
-      <a href="index.html" alt="project-page">Homepage</a>
-    </div>
-
-    <div class="push-1-8 my-name gutter">
-      <h1 class="tena">Krystyna MacLeod</h1>
-    </div>
-
-    <div class="nav-bar gutter-2">
-      <nav>
-        <a class="gutter-1-8" href="project.html" alt="project-page">Work</a>
-        <a class="gutter-1-8" href="index.html" alt="About-me">About</a>
-      <nav>
-    </div>
-
-  </header>
-
-  <div class="push text-center">
-    <i class="icon i-128">
-      <img class="img-flex" src="images/icon-head.svg" alt="head"></img>
-    </i>
-  </div>
-
-  <main>
-    <div>
-      <div class="grid">
-        <div class="unit s-1 m-1-2 l-1-2 text-center island">
-          <img class="img-flex" src="images/redesign-logo.jpg" alt="card"></img>
-        </div>
-
-        <div class="unit s-1 m-1-2 l-1-2 island">
-          <h2>Re-design Logo</h2>
-          <p>This was a re-designing of a company logo. I went with a northern company Eskan Company. </p>
-        </div>
-      </div>
-    </div>
-
-    <div>
-      <div class="grid">
-
-        <div class="unit s-1 m-1-2 l-1-2 island">
-          <h2>Sketches</h2>
-          <p>When re-designing the logo, I wanted to bring there company in more modern era of design but as well as keeping to who they are as a company. Keep simple shape with Teepee and slick design of the company building allows the logo mix both of roots and design. </p>
-        </div>
-
-        <div class="unit s-1 m-1-2 l-1-2 text-center island">
-          <i class="icons i-256">
-            <img class="img-flex icon" src="images/box.png" alt="card"></img>
-          </i>
-        </div>
-
-      </div>
-    </div>
-
-    <div>
-      <div class="grid">
-        <div class="unit s-1 m-1-2 l-1-2 text-center island">
-            <img class="img-flex" src="images/mock-up-logo-branding.jpg" alt="card"></img>
-        </div>
-
-        <div class="unit s-1 m-1-2 l-1-2 island">
-          <h2>Re-design Logo</h2>
-          <p>This was a re-designing of a company logo. I went with a northern company Eskan Company. </p>
-        </div>
-      </div>
-    </div>
-
-  </main>
-
-
-  <main>
-
-
-
-
-
-  <footer class="pad-t-1-2 pad-b-1-2 center-text">
-    <p class="micro push-1-8">© Krystyna Macleod</P>
-  </footer>
-
-</body>
-</html>
+<main>
+  {% include base-content.hmtl %}
+</main>
