--- a/project-logo.html
+++ b/project-logo.html
@@ -5,5 +5,5 @@ layout: default
 <h2 class="exa center-text">Re-design Logo</h2>
 
 <main>
-  {% include base-content.hmtl %}
+  {% include body-content.hmtl %}
 </main>
