Change title page content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-title: Homepage
-bodyClass: card-page
+title: Krystyna Macleod · Homepage Portfolio
 ---
 
 <h2 class="exa center-text">My Work</h2>
