Add content to index and project

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@ layout: default
 title: Krystyna Macleod · Homepage Portfolio
 ---
 
-<h2 class="exa center-text">My Work</h2>
+<h2 class="exa center-text">Portfolio Pieces</h2>
 
-<main class="wrapper {{page.bodyClass}}">
+<main class="wrapper push-2 {{page.bodyClass}}">
 
   {% include cards.html %}
   {% include about.html %}
