--- a/project.html
+++ b/project.html
@@ -1,5 +1,5 @@
 ---
-layout: default.html
+layout: default
 ---
 
- <h2 class="exa center-text">Portfolio</h2>
+ <h2 class="exa center-text">Portfolio Pieces</h2>
