--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ title: Krystyna Macleod · Homepage Portfolio
 <main class="wrapper push-2 {{page.bodyClass}}">
 
   {% include cards.html %}
-  {% include about.html %}
 
 </main>
+
+<section>
+  {% include about.html %}
+</section>
