Update content in somewhere

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Krystyna Macleod · Homepage Portfolio
+meta: Homepage of portfolio of graphic designer.
 ---
 
 <h2 class="exa center-text">Portfolio Pieces</h2>
