Fix code to try to get linking to work

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@ meta: Homepage of portfolio of graphic designer.
 
 <h2 class="exa center-text">Portfolio Pieces</h2>
 
-<main class="wrapper push-2 {{page.bodyClass}}">
-
+<main class="wrapper push-2">
   {% include cards.html %}
-
 </main>
 
 <section>
