Add link to social media

--- a/project-logo.html
+++ b/project-logo.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Portfolio · Re-design Logo
+meta: This page is an awesome re-design of Eskan Company logo.
 ---
 
 <h2 class="exa center-text">Re-design Logo</h2>
