Add wrapper to project page

--- a/project-logo.html
+++ b/project-logo.html
@@ -6,7 +6,7 @@ meta: This page is an awesome re-design of Eskan Company logo.
 
 <h2 class="exa center-text">Re-design Logo</h2>
 
-<main>
+<main class="wrapper">
 
   {% include body-content.html %}
 
