Change main to div

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ meta: Homepage of portfolio of graphic designer.
 
 <h2 class="exa center-text">Portfolio Pieces</h2>
 
-<main class="wrapper push-2">
+<div class="wrapper push-2">
   {% include cards.html %}
-</main>
+</div>
 
-<section>
+<div>
   {% include about.html %}
-</section>
+</div>
