Add new include html

--- a/project-logo.html
+++ b/project-logo.html
@@ -10,4 +10,6 @@ meta: This page is an awesome re-design of Eskan Company logo.
 
   {% include body-content.html %}
 
+  {% include images.html %}
+
 </main>
