Add changes to include

--- a/project-logo.html
+++ b/project-logo.html
@@ -2,6 +2,9 @@
 layout: default
 title: Portfolio · Re-design Logo
 meta: This page is an awesome re-design of Eskan Company logo.
+logo: logo.svg
+h1: Eskan Company
+body: This was a re-designing of a company logo. I went with a northern company Eskan Company.
 ---
 
 <h2 class="exa center-text">Re-design Logo</h2>
