Update pages to project logo

--- a/project-logo.html
+++ b/project-logo.html
@@ -5,6 +5,9 @@ meta: This page is an awesome re-design of Eskan Company logo.
 logo: logo.svg
 h1: Eskan Company
 body: This was a re-designing of a company logo. I went with a northern company Eskan Company.
+image1:
+image2: mock-up-logo-branding.jpg
+image3: logo-design.svg
 ---
 
 <h2 class="exa center-text">Re-design Logo</h2>
