Add content to event brand page

--- a/event-branding.html
+++ b/event-branding.html
@@ -1,7 +1,13 @@
 ---
 layout: default
 title: Portfolio · Event Branding
-meta: This page is an awesome event branding.
+meta: This page is an awesome design of event brand.
+logo: event-branding-icon.svg
+h1: Coffee Expo
+body: Add this content
+image1:
+image2: mock-up-logo-branding.jpg
+image3: logo-design.svg
 ---
 
 <h2 class="exa center-text">Event Branding</h2>
