Update content text

--- a/project-logo.html
+++ b/project-logo.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Portfolio · Re-design Logo
+title: Portfolio · Logo Design
 meta: This page is an awesome re-design of Eskan Company logo.
 logo: logo.svg
 h1: Eskan Company
-body: This was a re-designing of a company logo. I went with a northern company Eskan Company.
+body: This logo was to re-design for a company that was outdated and bring it into a more modern look. By using innovative thinking to come up with something that brings this company to the present.
 image1:
 image2: mock-up-logo-branding.jpg
 image3: logo-design.svg
