Add images to event branding page

--- a/event-branding.html
+++ b/event-branding.html
@@ -6,12 +6,16 @@ logo: event-branding-icon.svg
 h1: Coffee Expo
 body: Add this content
 image1:
-image2: mock-up-logo-branding.jpg
-image3: logo-design.svg
+image2: coffee-expo-poster.jpg
+image3: coffee-logo.svg
 ---
 
-<h2 class="exa center-text">Event Branding</h2>
+<h2 class="exa center-text pad-t">Event Branding</h2>
 
-<main>
+<main class="wrapper">
+
+  {% include body-content.html %}
+
+  {% include images.html %}
 
 </main>
