--- a/project-logo.html
+++ b/project-logo.html
@@ -10,7 +10,7 @@ image2: mock-up-logo-branding.jpg
 image3: logo-design.svg
 ---
 
-<h2 class="exa center-text">Re-design Logo</h2>
+<h2 class="exa center-text pad-t">Logo Design</h2>
 
 <main class="wrapper">
 
