--- a/event-branding.html
+++ b/event-branding.html
@@ -5,7 +5,7 @@ meta: This page is an awesome design of event brand.
 logo: event-branding-icon.svg
 h1: Coffee Expo
 body: Add this content
-image1:
+image1: coffee-branding-sketch.jpg
 image2: coffee-expo-poster.jpg
 image3: coffee-logo.svg
 ---
