Update images placement

--- a/event-branding.html
+++ b/event-branding.html
@@ -5,8 +5,8 @@ meta: This page is an awesome design of event brand.
 logo: event-branding-icon.svg
 h1: Coffee Expo
 body: Add this content
-image1: coffee-branding-sketch.jpg
-image2: coffee-expo-poster.jpg
+image1: coffee-expo-poster.jpg
+image2: event-branding-sketch.jpg
 image3: coffee-logo.svg
 ---
 
