--- a/event-branding.html
+++ b/event-branding.html
@@ -4,7 +4,7 @@ title: Portfolio · Event Branding
 meta: This page is an awesome design of event brand.
 logo: event-branding-icon.svg
 h1: Coffee Expo
-body: Add this content
+body: The Event Branding was
 image1: coffee-expo-poster.jpg
 image2: event-branding-sketch.jpg
 image3: coffee-logo.svg
