Add content to project page

--- a/project.html
+++ b/project.html
@@ -1,6 +1,21 @@
 ---
 layout: default
+title: Portfolio · Other content
 meta: This is the About page for the POMMe-Health.
+logo:
+h1:
+body:
+image1:
+image2:
+image3:
 ---
 
- <h2 class="exa center-text">Portfolio Pieces</h2>
+<h2 class="exa center-text pad-t">Event Branding</h2>
+
+<main class="wrapper">
+
+  {% include body-content.html %}
+
+  {% include images.html %}
+
+</main>
