Add content to illustration page

--- a/project.html
+++ b/project.html
@@ -1,16 +1,16 @@
 ---
 layout: default
-title: Portfolio · Other content
-meta: This is the About page for the POMMe-Health.
-logo:
-h1:
-body:
-image1:
-image2:
-image3:
+title: Portfolio · Icons
+meta: This is awesome icons illustrations.
+logo: monster.svg
+h1: Icons
+body: These are icons that I made for my personal work.
+image1: angry.svg
+image2: laptop.svg
+image3: notes.svg
 ---
 
-<h2 class="exa center-text pad-t">Event Branding</h2>
+<h2 class="exa center-text pad-t">Icon Illustrations</h2>
 
 <main class="wrapper">
 
