--- a/event-branding.html
+++ b/event-branding.html
@@ -4,7 +4,7 @@ title: Portfolio · Event Branding
 meta: This page is an awesome design of event brand.
 logo: event-branding-icon.svg
 h1: Coffee Expo
-body: The Event Branding was
+body: The Event Branding was to create a concept that comes together as whole. By taking a simple concept and making it come to life. To make a full out event branding.
 image1: coffee-expo-poster.jpg
 image2: event-branding-sketch.jpg
 image3: coffee-logo.svg
