Add more to tittle

--- a/event-branding.html
+++ b/event-branding.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Portfolio · Event Branding
+title: Portfolio · Event Branding · Ottawa, ON
 meta: This page is an awesome design of event brand.
 logo: event-branding-icon.svg
 h1: Coffee Expo
