--- a/project-logo.html
+++ b/project-logo.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Portfolio · Logo Design
+title: Portfolio · Logo Design · Ottawa, ON
 meta: This page is an awesome re-design of Eskan Company logo.
 logo: logo.svg
 h1: Eskan Company
