--- a/project.html
+++ b/project.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Portfolio · Icons
+title: Portfolio · Icons · Ottawa, ON
 meta: This is awesome icons illustrations.
 logo: monster.svg
 h1: Icons
