--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Krystyna Macleod · Homepage Portfolio
+title: Krystyna Macleod · Homepage Portfolio · Ottawa, ON
 meta: Homepage of portfolio of graphic designer.
 ---
 
