Update logo on page

--- a/project-logo.html
+++ b/project-logo.html
@@ -2,7 +2,7 @@
 layout: default
 title: Portfolio · Logo Design · Ottawa, ON
 meta: This page is an awesome re-design of Eskan Company logo.
-logo: logo.svg
+logo: eskan-logo.svg
 h1: Eskan Company
 body: This logo was to re-design for a company that was outdated and bring it into a more modern look. By using innovative thinking to come up with something that brings this company to the present.
 image1: logo-sketches.jpg
