Add image in figure

--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@ body: These are icons that I made for my personal work.
 image1: angry.svg
 image2: laptop.svg
 image3: notes.svg
+image3-content: Note icon
 ---
 
 <h2 class="exa center-text pad-t">Icon Illustrations</h2>
