Add and change image in logo

--- a/project.html
+++ b/project.html
@@ -4,9 +4,11 @@ title: Portfolio · Icons · Ottawa, ON
 meta: This is awesome icons illustrations.
 logo: monster.svg
 h1: Icons
-body: These are icons that I made for my personal work.
+body: These are icons that I made for my personal work. In making these icons, I wanted to create a colourful but cute design to follow my style.
 image1: angry.svg
+image1-content: Angry Icon of myself
 image2: laptop.svg
+image2-content: Computer Icon
 image3: notes.svg
 image3-content: Note icon
 ---
