--- a/project-logo.html
+++ b/project-logo.html
@@ -5,7 +5,7 @@ meta: This page is an awesome re-design of Eskan Company logo.
 logo: eskan-logo.svg
 h1: Eskan Company
 body: This logo was to re-design for a company that was outdated and bring it into a more modern look. By using innovative thinking to come up with something that brings this company to the present.
-image1: original-eskan-logo-jpg
+image1: original-eskan-logo.jpg
 image1-content: This is the original Logo.
 image2: mock-up-logo-branding.jpg
 image3: logo-design.svg
