--- a/project-logo.html
+++ b/project-logo.html
@@ -19,5 +19,8 @@ image3: logo-design.svg
 
   {% include images.html %}
 
-  {% include video.html %}
+  {<div>
+    <img class="img-flex" src="{{site.baseurl}}/images/banner-2.svg" alt="banner"></img>
+  </div>
+
 </main>
