--- a/project-logo.html
+++ b/project-logo.html
@@ -19,8 +19,8 @@ image3: logo-design.svg
 
   {% include images.html %}
 
-  {<div>
-    <img class="img-flex" src="{{site.baseurl}}/images/banner-2.svg" alt="banner"></img>
+  <div class="embed embed-4by3">
+    <video class="embed-item" muted loop autoplay src="{{base.baseurl}}/images/logo-animation.mp4"></video>
   </div>
 
 </main>
