Add video to work

--- a/project-logo.html
+++ b/project-logo.html
@@ -19,8 +19,5 @@ image3: logo-design.svg
 
   {% include images.html %}
 
-  <div class="embed embed-4by3">
-    <video class="embed-item" muted loop autoplay src="{{base.baseurl}}/images/logo-animation.mp4"></video>
-  </div>
-
+  {% include video.html %}
 </main>
