Add content and aria

--- a/event-branding.html
+++ b/event-branding.html
@@ -3,8 +3,12 @@ layout: default
 title: Portfolio · Event Branding · Ottawa, ON
 meta: This page is an awesome design of event brand.
 logo: event-branding-icon.svg
-h1: Coffee Expo
+h1: Research
 body: The Event Branding was to create a concept that comes together as whole. By taking a simple concept and making it come to life. To make a full out event branding.
+h2: Problem
+body-2:
+h3: Solution
+body-3:
 image1: coffee-expo-poster.jpg
 image2: event-branding-sketch.jpg
 image3: coffee-logo.svg
