--- a/project-logo.html
+++ b/project-logo.html
@@ -3,8 +3,12 @@ layout: default
 title: Portfolio · Logo Design · Ottawa, ON
 meta: This page is an awesome re-design of Eskan Company logo.
 logo: eskan-logo.svg
-h1: Eskan Company
-body: This logo was to re-design for a company that was outdated and bring it into a more modern look. By using innovative thinking to come up with something that brings this company to the present.
+h1: Research
+body: This case study was to re-design for a company that was outdated and bring it into a more modern look. Through research to keep way from designs that mostly used in the logos.
+h2: Problem
+body-2: The problem was the logo was not up to date with times but also keeping the company in mind.
+h3: Solution
+body-3: By using innovative thinking to come up with a design that was most suitable for the company.
 image1: original-eskan-logo.jpg
 image1-content: This is the original Logo.
 image2: mock-up-logo-branding.jpg
