--- a/project.html
+++ b/project.html
@@ -11,6 +11,12 @@ image2: laptop.svg
 image2-content: Computer Icon
 image3: notes.svg
 image3-content: Note icon
+image01:
+image01-content:
+image02:
+image02-content:
+image03:
+image03-content:
 ---
 
 <h2 class="exa center-text pad-t">Icon Illustrations</h2>
@@ -20,5 +26,7 @@ image3-content: Note icon
   {% include body-content.html %}
 
   {% include images.html %}
+
+  {% include images-2.html %}
 
 </main>
