Remove baseurl in config

--- a/project.html
+++ b/project.html
@@ -1,18 +1,20 @@
 ---
 layout: default
-title: Portfolio · Icons · Ottawa, ON
-meta: This is awesome icons illustrations.
+title: Portfolio · Illustration · Ottawa, ON
+meta: This is a page of awesome illustrations.
 logo: monster.svg
 h1: Icons
 body: These are icons that I made for my personal work. In making these icons, I wanted to create a colourful but cute design to follow my style.
+
 image1: angry.svg
 image1-content: Angry Icon of myself
 image2: laptop.svg
 image2-content: Computer Icon
 image3: notes.svg
-image3-content: Note icon
+image3-content: Note icon\
+
 image01:
-image01-content:
+image01-content: Landscape Badge illustration
 image02:
 image02-content:
 image03:
@@ -27,6 +29,5 @@ image03-content:
 
   {% include images.html %}
 
-  {% include images-2.html %}
 
 </main>
