--- a/event-branding.html
+++ b/event-branding.html
@@ -1,17 +1,27 @@
 ---
 layout: default
 title: Portfolio · Event Branding · Ottawa, ON
-meta: This page is an awesome design of event brand.
+meta: This page is an awesome design of event branding of coffee expo.
 logo: event-branding-icon.svg
 h1: Research
-body: The Event Branding was to create a concept that comes together as whole. By taking a simple concept and making it come to life. To make a full out event branding.
+body: This case study was to create a mocl event branding for a Coffe Expo.
 h2: Problem
-body-2:
+body-2: The problem was to create something that pulled people in and want to go to this event. Designing a poster, web banners and other contents for this event.
 h3: Solution
-body-3:
-image1: coffee-expo-poster.jpg
-image2: event-branding-sketch.jpg
+body-3: The solution I found woked was to chose a simple illustration style and an eye popping colour. By designing coffee brand that follow throughs the event.
+image1: event-branding-sketch.jpg
+image1-content: Sketches of the event
+image2: coffee-expo-poster.jpg
+image2-content: Poster 11" by 17"
 image3: coffee-logo.svg
+image3-content: Mock Coffee Expo Logo
+
+image01:
+image01-content: Web Banner
+image02:
+image02-content: Save the Date interactive PDF
+image03:
+image03-content: Feather Banner
 ---
 
 <h2 class="exa center-text pad-t">Event Branding</h2>
