--- a/project-logo.html
+++ b/project-logo.html
@@ -2,17 +2,30 @@
 layout: default
 title: Portfolio · Logo Design · Ottawa, ON
 meta: This page is an awesome re-design of Eskan Company logo.
+
 logo: eskan-logo.svg
+
 h1: Research
 body: This case study was to re-design for a company that was outdated and bring it into a more modern look. Through research to keep way from designs that mostly used in the logos.
 h2: Problem
 body-2: The problem was the logo was not up to date with times but also keeping the company in mind.
 h3: Solution
 body-3: By using innovative thinking to come up with a design that was most suitable for the company.
+
 image1: original-eskan-logo.jpg
 image1-content: This is the original Logo.
 image2: mock-up-logo-branding.jpg
+image2-content: Image of branding Guidelines
 image3: logo-design.svg
+image3-content: Logo Design in
+
+image01:
+image01-content: Landscape Badge illustration
+image02:
+image02-content:
+image03:
+image03-content:
+
 ---
 
 <h2 class="exa center-text pad-t">Logo Design</h2>
