--- a/project.html
+++ b/project.html
@@ -11,9 +11,9 @@ image1-content: Angry Icon of myself
 image2: laptop.svg
 image2-content: Computer Icon
 image3: notes.svg
-image3-content: Note icon\
+image3-content: Note icon
 
-image01:
+image01: bag-illustration.png
 image01-content: Landscape Badge illustration
 image02:
 image02-content:
@@ -28,6 +28,8 @@ image03-content:
   {% include body-content.html %}
 
   {% include images.html %}
+
+  {% include images-2.html %}
 
 
 </main>
