Add changes to illustration page

--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@ image3: notes.svg
 image3-content: Note icon
 
 image01: bag-illustration.png
-image01-content: Landscape Badge illustration
+image01-content: Landscape Badge
 image02:
 image02-content:
 image03:
@@ -30,6 +30,5 @@ image03-content:
   {% include images.html %}
 
   {% include images-2.html %}
-
 
 </main>
