add images to event branding

--- a/event-branding.html
+++ b/event-branding.html
@@ -11,16 +11,16 @@ h3: Solution
 body-3: The solution I found woked was to chose a simple illustration style and an eye popping colour. By designing coffee brand that follow throughs the event.
 image1: event-branding-sketch.jpg
 image1-content: Sketches of the event
-image2: coffee-expo-poster.jpg
+image2: coffee-expo-poster.svg
 image2-content: Poster 11" by 17"
 image3: coffee-logo.svg
 image3-content: Mock Coffee Expo Logo
 
-image01:
+image01: coffee-expo-webbanner.svg
 image01-content: Web Banner
-image02:
+image02: save-the-date.svg
 image02-content: Save the Date interactive PDF
-image03:
+image03: feather-event.svg
 image03-content: Feather Banner
 ---
 
@@ -31,5 +31,7 @@ image03-content: Feather Banner
   {% include body-content.html %}
 
   {% include images.html %}
+
+  {% include images-2.html %}
 
 </main>
