Add new images and typos

--- a/event-branding.html
+++ b/event-branding.html
@@ -4,7 +4,7 @@ title: Portfolio · Event Branding · Ottawa, ON
 meta: This page is an awesome design of event branding of coffee expo.
 logo: event-branding-icon.svg
 h1: Research
-body: This case study was to create a mocl event branding for a Coffe Expo.
+body: This case study was to create a mock event branding for a Coffe Expo.
 h2: Problem
 body-2: The problem was to create something that pulled people in and want to go to this event. Designing a poster, web banners and other contents for this event.
 h3: Solution
