--- a/project-logo.html
+++ b/project-logo.html
@@ -13,14 +13,14 @@ h3: Solution
 body-3: By using innovative thinking to come up with a design that was most suitable for the company.
 
 image1: original-eskan-logo.jpg
-image1-content: This is the original Logo.
+image1-content: This is the original Logo
 image2: mock-up-logo-branding.jpg
 image2-content: Image of branding Guidelines
 image3: logo-design.svg
-image3-content: Logo Design in
+image3-content: Logo Design in Scale
 
 image01:
-image01-content: Landscape Badge illustration
+image01-content:
 image02:
 image02-content:
 image03:
