--- a/project.html
+++ b/project.html
@@ -15,8 +15,8 @@ image3-content: Note icon
 
 image01: bag-illustration.png
 image01-content: Landscape Badge
-image02:
-image02-content:
+image02: personal-logo.svg
+image02-content: My Personal Brand Logo
 image03:
 image03-content:
 ---
